--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+.inner {
+  width: 90%;
+  max-width: 1800px;
+  margin: auto;
+}
 .weatherGrid {
   display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.grid {
+  width: 24%;
+  margin-bottom: 2em;
+}
+
+.grid:nth-child(odd) {
+  background: #eee;
 }
